#66: Fixed issue by adding a check for safari and setting overflow on safari to be auto

--- a/frontend/src/components/landing/body/LandingBody.css
+++ b/frontend/src/components/landing/body/LandingBody.css
@@ -11,6 +11,8 @@
     padding: 5% 10% 10% 15%;
     border-right: 1px solid rgba(0, 0, 0, .3);
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    height: 100%;
 }
 
 
@@ -19,11 +21,11 @@
 }
 
 .landing__body--left::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgb(24,43, 73);
+    -webkit-box-shadow: inset 0 0 6px rgb(24, 43, 73);
 }
 
 .landing__body--left::-webkit-scrollbar-thumb {
-    background: rgb(24,43, 73);
+    background: rgb(24, 43, 73);
     outline: 1px solid rgb(24, 43, 73);
     border-radius: 30px;
 }
