--- a/frontend/src/components/schedule/calendar/WeekCalendar.css
+++ b/frontend/src/components/schedule/calendar/WeekCalendar.css
@@ -2,6 +2,10 @@
     height: 100%;
 }
 
+.calendar.safari {
+    height: 35em;
+}
+
 .calendar .dayz.week .x-labels {
     padding-left: 0;
     margin-left: 60px;
